# kerneldescriptionpythonexamplecode

./: .gitignore  README.md  apb_config.py  application.py  bird.py  grid.py  grid_noc.py  hw_components.py  hw_resources.py  kernel.py  kernel_binary_parser.py  kernel_config.h  kernel_config.json  kernel_config.py  kernel_types.py  memory_manager.py  memory_manager_demo.py  resource_allocators.py  simple_batch_test.py  test_batch_allocation.py  test_requirements_tracking.py
cpp/: CMakeLists.txt  app_initializer.sln  app_initializer.vcxproj  app_initializer.vcxproj.filters
cpp/src/: app_initializer.cpp  app_initializer.hpp
cpp/test/: test_app_initializer.cpp
kernels/: kern-gs.vcore.elf.eDMw  kern-gs.vcore.elf.ePM  kern-gs.vcore.elf.eVM  ncore-grid.ncore.elf.eDM  ncore-grid.ncore.elf.ePM
